[package]
name = "four"
version = "0.1.0"
authors = ["HLennart <lennart.heggemann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true